# app/Http/Controllers/UserController.php
@@ -10,6 +10,7 @@ use Illuminate\Support\Facades\Hash;
 
 class UserController extends Controller
 {
+
    public function store(Request $request)
    {
         $this->validate($request, [
@@ -26,6 +27,58 @@ class UserController extends Controller
 
    }
 
+    /**
+     *
+     * @SWG\Post(
+     *      tags={"Check in"},
+     *      path="/check/{user}/add",
+     *      summary="logout currently logged in user",
+     *      security={
+     *          {"jwt": {}}
+     *      },
+     *     @SWG\Parameter(
+     *         name="user",
+     *         in="path",
+     *         required=true,
+     *         type="integer",
+     *         format="integer",
+     *         default="1",
+     *      ),
+     *     @SWG\Parameter(
+     *         name="city",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *         default="Jeddah",
+     *      ),@SWG\Parameter(
+     *         name="address",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *         default="Jeddah, Tihamah, Saudi Arabia	",
+     *      ),@SWG\Parameter(
+     *         name="latitude",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *          default="21.543333",
+     *      ),@SWG\Parameter(
+     *         name="longitude",
+     *         in="formData",
+     *         required=true,
+     *         type="string",
+     *         format="string",
+     *         default="39.172779",
+     *      ),
+     *      @SWG\Response(response=200, description="message"),
+     *      @SWG\Response(response=401, description="Unauthorized"),
+     *      @SWG\Response(response=402, description="Validation Error"),
+     *      @SWG\Response(response=403, description="Forbidden The client did not have permission to access the requested resource."),
+     * )
+     */
 
    public function checkIn(Request $request, User $user)
    {
@@ -49,9 +102,9 @@ class UserController extends Controller
            ]);
        }
 
-       $locations = User::has('checks')->with('checks')->get();
+       //$locations = User::has('checks')->get();
         //return $locations;
-       event(new MapEvent($locations));
+       event(new MapEvent($user));
        return response()->json(['message'=>'success']);
    }
 }
